// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Random Color component chooses a color 1`] = `
<Fragment>
  <ColorDisplay
    backgroundColor="black"
    yuh={false}
  />
</Fragment>
`;

exports[`Random Color component console logs on color click 1`] = `
<Fragment>
  <ColorDisplay
    backgroundColor="yellow"
    yuh={false}
  />
</Fragment>
`;
